<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <!--Photo-->
    <ImageView
        android:id="@+id/photo_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/photo_height"
        android:contentDescription="@string/my_photo"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/avatar" />
    <!--android:scaleType="centerCrop"-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!--Key Info-->
            <android.support.v7.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/key_section_height"
                android:layout_gravity="center"

                android:paddingBottom="@dimen/key_section_standart_padding"
                android:paddingEnd="@dimen/key_section_standart_padding"
                android:paddingStart="@dimen/key_section_start_padding"
                android:paddingTop="@dimen/key_section_standart_padding"
                app:columnCount="2"
                app:rowCount="3">

                <ImageView
                    android:id="@+id/aviator_logo"
                    style="@style/LogoImgStyle"
                    android:contentDescription="@string/aviator_text"
                    app:srcCompat="@drawable/aviator" />

                <TextView
                    android:id="@+id/aviator_text"
                    style="@style/KeyItemDescStyle"
                    android:text="@string/aviator_text"
                     />

                <ImageView
                    android:id="@+id/dev_logo"
                    style="@style/LogoImgStyle"
                    android:contentDescription="@string/dev_text"
                    app:srcCompat="@drawable/developer" />

                <TextView
                    android:id="@+id/dev_text"
                    style="@style/KeyItemDescStyle"
                    android:text="@string/dev_text" />

                <ImageView
                    android:id="@+id/student_logo"
                    style="@style/LogoImgStyle"
                    android:contentDescription="@string/student_text"
                    app:srcCompat="@drawable/android_student" />

                <TextView
                    android:id="@+id/student_text"
                    style="@style/KeyItemDescStyle"
                    android:text="@string/student_text" />

            </android.support.v7.widget.GridLayout>

            <!--Description block-->
            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_marginEnd="@dimen/common_end_margin"
                android:layout_marginStart="@dimen/common_start_margin"
                android:layout_marginBottom="@dimen/key_margin"
                android:background="@drawable/description_back" />

            <TextView
                android:id="@+id/description_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/description_section_height"
                android:layout_marginEnd="@dimen/common_end_margin"
                android:layout_marginStart="@dimen/common_start_margin"
                android:scrollbars="vertical"
                android:text="@string/description_text"
                android:textSize="@dimen/text_size" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_marginEnd="@dimen/common_end_margin"
                android:layout_marginStart="@dimen/common_start_margin"
                android:layout_marginTop="@dimen/key_margin"
                android:background="@drawable/description_back" />

            <!--Feedback block-->
            <EditText
                android:id="@+id/message_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/feedback_field_height"
                android:layout_marginEnd="@dimen/common_end_margin"
                android:layout_marginStart="@dimen/common_start_margin"

                android:hint="@string/feedback_hint"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/send_btn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/send_btn_height"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/common_start_margin"
                android:layout_marginEnd="@dimen/common_end_margin"
                android:text="@string/feedback_btn_text" />

            <!-- Social block-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginEnd="@dimen/common_end_margin"
                android:layout_marginStart="@dimen/common_start_margin"

                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/habr_logo"
                    style="@style/LogoImgStyle"
                    android:contentDescription="@string/habr_desc"
                    app:srcCompat="@drawable/habr" />

                <ImageView
                    android:id="@+id/vk_logo"
                    style="@style/LogoImgStyle"
                    android:contentDescription="@string/vk_desc"
                    app:srcCompat="@drawable/vk" />
            </LinearLayout>

            <TextView
                android:id="@+id/disclaimer_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_start_margin"
                android:layout_marginEnd="@dimen/common_end_margin"
                android:textSize="@dimen/text_size"
                android:textAlignment="center"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>